--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,47 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# Compiled class files
+*.class
+
+# Log files
+*.log
+
+# Maven / Gradle build directories
+/target/
+/build/
+
+# IntelliJ IDEA
+.idea/
+*.iml
+
+# Eclipse
+.project
+.classpath
+.settings/
+
+# NetBeans
+.nb-gradle/
+
+# Spring Boot DevTools
+.spring-boot-devtools/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# JAR files
+*.jar
+*.war
+*.ear
+
+# Gradle wrapper
+.gradle/
+
+# Local IDE settings
+.vscode/
+
+# Application specific files (e.g., database files, etc.)
+application.properties
